# IntercomTakeHomeTask

./: CMakeLists.txt  Customer.cpp  Customer.hpp  Makefile  README.md  main.cpp  output.txt
test/: CMakeLists.txt  IntercomTests.cpp
